--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
+.App{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: center;
+  margin: 20px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn{
+  margin : 10px 10px 10px 10px;
+  padding:5px 15px 5px 15px;
+  width:auto;
+  height:auto;
+  background-color: rgb(61, 3, 52);
+  color:white;
+  text-decoration: 'bold';
+  border-radius: 3px;
+  font-size: large;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn:hover{
+  background-color:white;
+  color:rgb(61, 3, 52);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+form{
+  background-color: burlywood;
+  margin: 20px;
+  padding:20px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  justify-self: center;
+  display: inline-block;
+  margin:1%;
+  width:30%;
+  height:30px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: large;
 }
